fix collapse menu issue

--- a/css/section.css
+++ b/css/section.css
@@ -129,3 +129,8 @@
     margin-top: 20px;
     /* border:1px solid #000 */
 }
+
+.mybar {
+    background: (0,0,0,0.7) !important;
+    color: #ffffff;
+}
